--- a/package.json
+++ b/package.json
@@ -4,15 +4,26 @@
   "private": true,
   "homepage": "https://CrazyRedTime.github.io/aptapta",
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "classnames": "^2.3.1",
+    "google-map-react": "^2.1.9",
+    "lodash.uniqby": "^4.7.0",
     "nuka-carousel": "^4.7.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-geocode": "^0.2.3",
+    "react-redux": "^7.2.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-svg": "^13.0.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "sass": "^1.32.8",
     "web-vitals": "^1.0.1"
   },
