--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
     "react-geocode": "^0.2.3",
+    "react-outside-click-handler": "^1.3.0",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
