--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "google-map-react": "^2.1.9",
     "lodash.uniqby": "^4.7.0",
     "nuka-carousel": "^4.7.7",
+    "query-string": "^7.0.0",
     "react": "^17.0.2",
     "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.2",
